--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="default_time">03:00</string>
     <string name="btn_pause">PAUSE</string>
     <string name="btn_reset">RESET</string>
+    <string name="set_time">03:00</string>
 </resources>
